<resources>
    <string name="app_name">About Me</string>
    <string name="name">Hansel De Los Santos</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">"Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        \nLorem Ipsum has been the industry's standard dummy text ever since the 1500s,
        \nwhen an unknown printer took a galley of type and scrambled
        \nit to make a type specimen book. It has survived not only five centuries,
        \nbut also the leap into electronic typesetting, remaining essentially unchanged.
        \nIt was popularised in the 1960s with the release of Letraset sheets containing
        \nLorem Ipsum passages, and more recently with desktop publishing software like Aldus
        \nPageMaker including versions of Lorem Ipsum
        \nLorem Ipsum has been the industry's standard dummy text ever since the 1500s,
        \nwhen an unknown printer took a galley of type and scrambled
        \nit to make a type specimen book. It has survived not only five centuries,
        \nbut also the leap into electronic typesetting, remaining essentially unchanged.
        \nIt was popularised in the 1960s with the release of Letraset sheets containing
        \nLorem Ipsum passages, and more recently with desktop publishing software like Aldus
        \nPageMaker including versions of Lorem Ipsum"</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">DONE</string>
</resources>
